--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME=FarmStore
 APP_ENV=local
 APP_KEY=base64:5J0Rs+dvU+s+2aQiLFXx7H+hfaTVrchzAJckuIzOWis=
 APP_DEBUG=true
@@ -11,7 +11,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=movie_db
+DB_DATABASE=farmer
 DB_USERNAME=root
 DB_PASSWORD=
 
